--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.14.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
