--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.14.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
