--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "html-react-parser": "^5.2.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.14.0",
