--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "html-react-parser": "^5.2.1",
     "lodash.debounce": "^4.0.8",
     "mongodb": "^6.12.0",
@@ -23,11 +26,15 @@
     "react-intersection-observer": "^9.14.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
-    "react-select": "^5.9.0"
+    "react-select": "^5.9.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^22.10.10",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
