--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "html-react-parser": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
