--- a/package.json
+++ b/package.json
@@ -15,15 +15,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "firebase": "^11.2.0",
     "html-react-parser": "^5.2.1",
-    "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.14.0",
@@ -34,8 +28,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.10.10",
     "@types/react": "^18.3.12",
